fix align position and arrow

--- a/src/components/APopover/style.scss
+++ b/src/components/APopover/style.scss
@@ -4,20 +4,22 @@ $pointer-size: 5px;
   display: block;
   position: absolute;
   background: #fff;
-  box-shadow: 0px 4px 20px 0px rgba(52, 73, 94, 0.2);
   padding: 5px;
   border-radius: 5px;
+  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.2);
   z-index: 2;
 
   &:before {
     position: absolute;
     content: '';
-
-    right: 0px;
-    top: -5px;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 5px solid black;
+    right: var(--right);
+    left: var(--left);
+    top: -4px;
+    transform: rotate(45deg);
+    border: 5px solid transparent;
+    border-left-color: #fff;
+    border-top-color: #fff;
+    box-shadow: -1px -1px 6px -1.5px rgba(0, 0, 0, 0.2)
   }
 
   &.position-bottom:before {
@@ -29,6 +31,7 @@ $pointer-size: 5px;
     filter: drop-shadow(0px -2px 2px rgba(52, 73, 94, 0.1));
   }
 
+  // unnecessary for now
   &.position-top:before {
     border-left: $pointer-size solid transparent;
     border-right: $pointer-size solid transparent;
